Adapt for latest Thermostat.