@@ -41,47 +41,29 @@
 
   <groupId>com.redhat.thermostat.plugins.tutorial.kernel.cmdline</groupId>
   <artifactId>thermostat-kernel-cmdline</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Thermostat Kernel Commandline Plug-in</name>
-  <url>${thermostat.url}</url>
+  <url>https://github.com/jerboaa/thermostat-agent-plugin-ex</url>
 
   <properties>
   
     <main.basedir>${project.basedir}</main.basedir>  
   
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
-    <thermostat.url>http://icedtea.classpath.org/thermostat/</thermostat.url>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <thermostat.java.version>1.7</thermostat.java.version>
     <junit.version>4.10</junit.version>
     <mockito.version>1.9.0</mockito.version>
-    <fest.version>1.2.1</fest.version>
-
-    <java.dir>/usr/share/java</java.dir>
-
     <osgi.core.version>4.2.0</osgi.core.version>
     <osgi.compendium.version>4.2.0</osgi.compendium.version>
-    <felix.framework.version>4.0.2</felix.framework.version>
-    <!-- Work with a stable thermostat core version -->
-    <thermostat-core-version>1.0.1-SNAPSHOT</thermostat-core-version>
-    
-    <!-- Dependencies which core thermostat uses -->
-    <mongo-driver.osgi-version>2.11.2.RELEASE</mongo-driver.osgi-version>
-    <commons-beanutils.version>1.8.3</commons-beanutils.version>
-    <commons-codec.osgi-version>1.7.0</commons-codec.osgi-version>
-    <commons-collections.version>3.2.1</commons-collections.version>
-    <commons-logging.version>1.1.3</commons-logging.version>
-    <httpcomponents.core.version>4.1.2</httpcomponents.core.version>
-    <httpcomponents.client.version>4.1.2</httpcomponents.client.version>
-    <gson.version>2.2.2</gson.version>
-    
+    <java-compile-version>1.7</java-compile-version>
+    <felix.scr.annotations.version>1.9.12</felix.scr.annotations.version>
+    <thermostat-core-version>1.99.12-SNAPSHOT</thermostat-core-version>
     
   </properties>
 
   <modules>
-    <module>client-cli</module>
     <module>agent</module>
     <module>storage-common</module>
     <module>distribution</module>
@@ -95,8 +77,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
           <configuration>
-            <source>${thermostat.java.version}</source>
-            <target>${thermostat.java.version}</target>
+            <source>${java-compile-version}</source>
+            <target>${java-compile-version}</target>
           </configuration>
         </plugin>
  
@@ -104,22 +86,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.12</version>
-          <configuration>
-            <argLine>-XX:-UseSplitVerifier -XX:MaxPermSize=300m</argLine>
-            <systemPropertyVariables>
-              <java.awt.headless>false</java.awt.headless>
-              <awt.toolkit>net.java.openjdk.cacio.ctc.CTCToolkit</awt.toolkit>
-              <java.awt.graphicsenv>net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment</java.awt.graphicsenv>
-              <com.redhat.thermostat.utils.keyring.provider>com.redhat.thermostat.utils.keyring.MemoryKeyring</com.redhat.thermostat.utils.keyring.provider>
-            </systemPropertyVariables>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit47</artifactId>
-              <version>2.12</version>
-            </dependency>
-          </dependencies>
         </plugin>
 
         <plugin>
@@ -127,7 +93,13 @@
           <artifactId>maven-bundle-plugin</artifactId>
           <version>1.4.0</version>
         </plugin>
-
+        
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-scr-plugin</artifactId>
+          <version>1.22.0</version>
+        </plugin>
+        
     </plugins>
    </pluginManagement>
   </build>
@@ -155,11 +127,6 @@
         <artifactId>org.osgi.compendium</artifactId>
         <version>${osgi.compendium.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.framework</artifactId>
-        <version>${felix.framework.version}</version>
-      </dependency>
     
       <!-- thermostat dependencies -->
 
@@ -186,7 +153,15 @@
           <artifactId>thermostat-client-core</artifactId>
           <version>${thermostat-core-version}</version>
       </dependency>
+      
+      <!-- Declarative Services -->
     
+      <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+        <version>${felix.scr.annotations.version}</version>
+      </dependency>
+      
     </dependencies>
   </dependencyManagement>
 
